--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.3.0
 dnspython==2.8.0
 email-validator==2.3.0
 Flask==3.1.2
+Flask-CORS==6.0.1
 Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
@@ -12,6 +13,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 PyJWT==2.10.1
 python-dotenv==1.1.1
+requests==2.32.5
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
